--- a/Clase02/Clase_2_2,_Kernel_Tricks.ipynb
+++ b/Clase02/Clase_2_2,_Kernel_Tricks.ipynb
@@ -2325,13 +2325,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 25,
       "metadata": {
         "id": "2IhPNu9seNc5"
       },
       "outputs": [],
       "source": [
-        "X, y = make_circles(n_samples=200, factor=0.3, noise=0.1, random_state=42)"
+        "X, y = make_circles(n_samples=200, factor=0.3, noise=0.1, random_state=42) # Generar datos en círculos"
       ]
     },
     {
@@ -2467,13 +2467,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 26,
       "metadata": {
         "id": "7vrP2vjXedi8"
       },
       "outputs": [],
       "source": [
-        "X, y = make_classification(n_samples=200, n_features=2, n_informative=2, n_redundant=0, n_clusters_per_class=2, class_sep=0.2, random_state=42)"
+        "X, y = make_classification(n_samples=200, n_features=2, n_informative=2, n_redundant=0, n_clusters_per_class=2, class_sep=0.2, random_state=42) \n",
+        "# Generar datos de clasificación"
       ]
     },
     {
@@ -2582,15 +2583,6 @@
         "# Graficamos resultados\n",
         "plot_svm_decision_boundary(poly_svm, X_test, y_test)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "9wYi-tOqRYX6"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
