Refactor notebook execution counts and add missing imports for PCA and SML. Update dataset loading and initial analysis outputs.

--- a/Clase03/Tarea_2,_Reconocimiento_Facial_usando_PCA_y_SML.ipynb
+++ b/Clase03/Tarea_2,_Reconocimiento_Facial_usando_PCA_y_SML.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "Ru3XqQMzbpiy"
       },
@@ -69,6 +69,25 @@
         "from sklearn.datasets import fetch_lfw_people\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from time import time\n",
+        "\n",
+        "# Cargamos el dataset LFW desde scikit-learn\n",
+        "from sklearn.datasets import fetch_lfw_people\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n"
       ]
     },
     {
@@ -82,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "4-Z7wVK7btR4"
       },
@@ -102,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -299,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "djU7U3lKcnsL"
       },
@@ -320,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,7 +354,7 @@
               "(1348, 2914)"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,12 +365,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "a27IgmGIZMVZ"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Número de muestras: 1560\n",
+            "Número de features (píxeles): 1850\n",
+            "Número de clases/personas: 12\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Importar las librerías necesarias\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from time import time\n",
+        "from sklearn.datasets import fetch_lfw_people\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Cargar el dataset LFW, considerando solo personas con al menos 50 imágenes\n",
+        "lfw_people = fetch_lfw_people(min_faces_per_person=50, resize=0.4)\n",
+        "\n",
+        "# Extraer los datos y las etiquetas\n",
+        "X = lfw_people.data        # Cada fila es una imagen aplanada\n",
+        "y = lfw_people.target      # Etiquetas numéricas\n",
+        "target_names = lfw_people.target_names\n",
+        "n_samples, n_features = X.shape\n",
+        "n_classes = target_names.shape[0]\n",
+        "\n",
+        "print(\"Número de muestras:\", n_samples)\n",
+        "print(\"Número de features (píxeles):\", n_features)\n",
+        "print(\"Número de clases/personas:\", n_classes)\n",
+        "\n",
+        "# Dividir el dataset en entrenamiento y prueba (25% para prueba)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.25, stratify=y, random_state=42)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -375,12 +429,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "Izu-y8MvZd0f"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from sklearn.decomposition import PCA\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -431,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "bvZpyE-nba_7"
       },
@@ -442,9 +498,15 @@
           "text": [
             "<>:4: SyntaxWarning: invalid escape sequence '\\P'\n",
             "<>:4: SyntaxWarning: invalid escape sequence '\\P'\n",
-            "C:\\Users\\DATABYTES\\AppData\\Local\\Temp\\ipykernel_1868\\2092392468.py:4: SyntaxWarning: invalid escape sequence '\\P'\n",
-            "  print(\"\\nActual\\t\\t\\Predicción\\n\")\n",
-            "C:\\Users\\DATABYTES\\AppData\\Local\\Temp\\ipykernel_1868\\2092392468.py:4: SyntaxWarning: invalid escape sequence '\\P'\n",
+            "C:\\Users\\DATABYTES\\AppData\\Local\\Temp\\ipykernel_16404\\2092392468.py:4: SyntaxWarning: invalid escape sequence '\\P'\n",
+            "  print(\"\\nActual\\t\\t\\Predicción\\n\")\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\DATABYTES\\AppData\\Local\\Temp\\ipykernel_16404\\2092392468.py:4: SyntaxWarning: invalid escape sequence '\\P'\n",
             "  print(\"\\nActual\\t\\t\\Predicción\\n\")\n"
           ]
         },
@@ -455,7 +517,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m incorrect = \u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m total = \u001b[38;5;28mlen\u001b[39m(\u001b[43mpredictions\u001b[49m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mActual\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m\\\u001b[39m\u001b[33mPredicción\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(total):\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m incorrect = \u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m total = \u001b[38;5;28mlen\u001b[39m(\u001b[43mpredictions\u001b[49m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mActual\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m\\\u001b[39m\u001b[33mPredicción\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(total):\n",
             "\u001b[31mNameError\u001b[39m: name 'predictions' is not defined"
           ]
         }
