--- a/Clase05/Clase_5_2,_Backpropagation.ipynb
+++ b/Clase05/Clase_5_2,_Backpropagation.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -26,56 +12,54 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "P3bBn4P7XTJC"
+      },
       "source": [
         "### Parte A, Realizamos la gradiente de manera manual.\n",
         "\n",
         "Pista: no necesitas ninguna libreria"
-      ],
-      "metadata": {
-        "id": "P3bBn4P7XTJC"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "KJRUWukijq57"
       },
+      "outputs": [],
       "source": [
         "a = 1\n",
         "b = 2\n",
         "c = 3"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "9_hwBfnVjz9U"
       },
+      "outputs": [],
       "source": [
         "d = a + b\n",
         "e = b - c"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "nEswBdzQj54a"
       },
+      "outputs": [],
       "source": [
         "y = d*e"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,116 +67,157 @@
         "id": "LqBVrumggtsZ",
         "outputId": "fa4a3c9f-9372-4cf6-dc3e-dbad2e117519"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "-3"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "y"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "_5YfVwkoj9M1"
       },
+      "outputs": [],
       "source": [
         "dy_dd = e\n",
         "dy_de = d"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "vHRMA2u0kFNA"
       },
+      "outputs": [],
       "source": [
         "dd_da = 1\n",
         "dd_db = 1"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "qQ8R-trikIC7"
       },
+      "outputs": [],
       "source": [
         "de_db = 1\n",
         "de_dc = -1"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "5ild34I1kM2o"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-1\n"
+          ]
+        }
+      ],
       "source": [
         "dy_da = dy_dd * dd_da\n",
         "print(dy_da)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "OvEUX2zxkUUV"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "dy_db = (dy_dd * dd_db) + (dy_de * de_db)\n",
         "print(dy_db)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "id": "9hl5JgwSkhe_"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-3\n"
+          ]
+        }
+      ],
       "source": [
         "dy_dc = dy_de * de_dc\n",
         "print(dy_dc)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IdoKLS-5XeWL"
+      },
       "source": [
         "### Parte B, realizamos el cálculo de gradientes con PyTorch\n",
         "\n",
         "Pista: no necesitas instalar nada, ya viene instalado en Colab!"
-      ],
-      "metadata": {
-        "id": "IdoKLS-5XeWL"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "-9o9wLlHlIDk"
       },
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'torch'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
+          ]
+        }
+      ],
       "source": [
         "import torch"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "XCRP_aPjXsns"
+      },
       "source": [
         "Ejercicio 11.3 Inicializa las entradas.\n",
         "\n",
@@ -201,99 +226,120 @@
         "Pista: https://pytorch.org/docs/stable/tensors.html\n",
         "\n",
         "Pista 2: https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html\n"
-      ],
-      "metadata": {
-        "id": "XCRP_aPjXsns"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_rgXhu4JkndC"
       },
+      "outputs": [],
       "source": [
         "a = torch.tensor(1.0, requires_grad = True)\n",
         "b = torch.tensor(2.0, requires_grad = True)\n",
         "c = torch.tensor(3.0, requires_grad = True)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "u2-9mtmnlY_1"
       },
+      "outputs": [],
       "source": [
         "d = a + b\n",
         "e = b - c"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "3t-pSOqYlhD8"
       },
+      "outputs": [],
       "source": [
         "y = d * e"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5tWVvQsTlkaf"
       },
+      "outputs": [],
       "source": [
         "y.backward()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "o1BFFpC8lrL8"
       },
+      "outputs": [],
       "source": [
         "a.grad"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "EkWu0zPOlz_3"
       },
+      "outputs": [],
       "source": [
         "b.grad"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Y8rFZ8SPl13W"
       },
+      "outputs": [],
       "source": [
         "c.grad"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "KYHDcZXnl3Lw"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
